Archive2/f4/c05741e00028e8/output
main.cpp:5:20: error: reference to non-static member function must be called; did you mean to call it with no arguments?
    char* p = line.data;
              ~~~~~^~~~
                       ()
main.cpp:5:11: error: cannot initialize a variable of type 'char *' with an rvalue of type 'const_pointer' (aka 'const char *')
    char* p = line.data;
          ^   ~~~~~~~~~
2 errors generated.
