Archive2/f4/c05741e00028e8/main.cpp
#include <string>

int main() {
    std::string line;
    char* p = line.data;
}